# bazel-example

./: BUILD.bazel  README.md  WORKSPACE  index.html  main.ts  main.tsx  package.json  rollup.config.js  test.proto  tsconfig.json
