load("@npm//@bazel/labs:index.bzl", "ts_proto_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "echo_proto",
    srcs = ["echo.proto"],
)

ts_proto_library(
    name = "echo_ts_proto",
    proto = ":echo_proto",
)

ts_project(
		srcs = [ "main.ts" ],
    deps = [
        ":echo_ts_proto",
	"@npm//@types/google-protobuf",
    ],
)
