load("@npm//@bazel/labs:index.bzl", "ts_proto_library")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@npm//http-server:index.bzl", "http_server")

proto_library(
    name = "echo_proto",
    srcs = ["echo.proto"],
)

ts_proto_library(
    name = "echo",
    proto = ":echo_proto",
)

ts_project(
    srcs = ["main.tsx"],
    deps = [
        ":echo",
	"@npm//@types",
	"@npm//csstype",
	"@npm//google-protobuf",
	"@npm//grpc-web",
    ],
)

rollup_bundle(
    name = "bundle",
    config_file = "rollup.config.js",
    entry_point = ":main.tsx",
    format = "iife",
    deps = [
        ":tsconfig",
	":echo",
        "@npm//:node_modules",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
	"@npm//google-protobuf",
    ],
)

http_server(
    name = "prodserver",
    data = [
        "index.html",
        ":bundle.js",
    ],
)
